--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: You
-middle_name: R.
-last_name: Name
+first_name: Jieun
+middle_name: #R.
+last_name: Ko
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
@@ -191,6 +191,7 @@ exclude:
   - README.md
   - readme_preview/
   - vendor
+ 
 keep_files:
   - CNAME
   - .nojekyll
@@ -263,8 +264,8 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Ko]
+  first_name: [Jieun]
 
   style: apa
   locale: en
