--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,11 +2,11 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Jieun Ko
     - name: Date of Birth
-      value: 14th March 1879
+      value: 7th Feb. 1988
     - name: Languages
-      value: English, German
+      value: Korean, English
 
 - title: Education
   type: time_table
